--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,39 @@
     </div>
 
   </div>
+
+  <div class="benefits">
+    <div class="container">
+      <h2 class="benefits__title">НАШИ ПРЕИМУЩЕСТВА</h2>
+    <div class="benefits__wrapper">
+      <div class="benefits__card">
+        <div class="benefits__icon">
+          <img src="icons/advantages/cup.png" alt="" class="benefits__img">
+        </div>
+        <div class="benefits__subtitle">Делимся опытом</div>
+        <div class="benefits__descr">Наши сотрудники всегда готовы поделиться своим опытом, 
+          так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+      </div>
+      <div class="benefits__card">
+        <div class="benefits__icon">
+          <img src="icons/advantages/heart.png" alt="" class="benefits__img">
+        </div>
+        <div class="benefits__subtitle">Заботимся о здоровье</div>
+        <div class="benefits__descr">Мы работаем для того, 
+          чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+      </div>
+      <div class="benefits__card">
+        <div class="benefits__icon">
+          <img src="icons/advantages/shoe.png" alt="" class="benefits__img">
+        </div>
+        <div class="benefits__subtitle">Учим бегать</div>
+        <div class="benefits__descr">Помогаем с обучением 
+          правильной технике бега! 
+          Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+      </div>
+    </div>
+    </div>
+  </div>
   
 </body>
 </html>
