--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 
   <div class="benefits">
     <div class="container">
-      <h2 class="benefits__title">НАШИ ПРЕИМУЩЕСТВА</h2>
+      <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
     <div class="benefits__wrapper">
       <div class="benefits__card">
         <div class="benefits__icon">
@@ -85,13 +85,33 @@
           <img src="icons/advantages/shoe.png" alt="" class="benefits__img">
         </div>
         <div class="benefits__subtitle">Учим бегать</div>
-        <div class="benefits__descr">Помогаем с обучением 
-          правильной технике бега! 
-          Дружим с крупнейшей школой бега в России - <a href="#">I LOVE RUNNING.</a></div>
+        <div class="benefits__descr">
+          Помогаем с обучением 
+          правильной технике бега! <br>
+          Дружим с крупнейшей школой бега в
+          <br> России - <a href="#">I LOVE RUNNING.</a></div>
       </div>
     </div>
     </div>
   </div>
-  
+  <div class="consultation">
+    <div class="container">
+      <h2 class="title title_left">
+        Получите бесплатную консультацию<br>
+        по подбору пульсометра
+      </h2>
+      <div class="consultation__descr">
+        Просто заполните форму заявки <br>
+        и мы перезвоним вам в течении 10 минут
+      </div>
+      <form class="feed-form" action="#" method="">
+        <input name="name" required placeholder="Ваше имя" type="text">
+        <input name="phone" required placeholder="Ваш телефон" type="number">
+        <input name="required" required placeholder="Ваш E-mail" type="email">
+        <button class="button button_submit" type="submit">заказать кОНСУЛЬТАЦИЮ</button>
+      </form>
+    </div>
+    
+  </div>
 </body>
 </html>
